--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ sudo: required
 
 services:
   - docker
-  
+
 before_install:
-  - docker build -t ldejager/alpine-glibc .
+  - docker build -t ldejager/alpine-glibc-test .
   - docker run -d --name alpine-glibc-test ldejager/alpine-glibc-test /bin/sh -c "echo testing;"
   - docker ps -a
 
